# whimsical-survival

./: .gitignore  CMakeLists.txt
include/: input.hpp  player.hpp
include/SDL2/: SDL_config.h
include/foxcore/: collision.hpp  input.hpp  io.h  io.hpp  object.hpp  parser.hpp  render.h  render.hpp  shader.h  shader.hpp
include/glad/: glad.h
lib/: libSDL2-2.0.so.0
shaders/: default.frag  default.vert
src/: input.cpp  main.c  main.cpp
src/foxcore/: collision.cpp  input.cpp  io.c  io.cpp  parser.cpp  render.c  render.cpp  shader.c  shader.cpp
src/foxcore/glad/: glad.c
